# CQPlayer

./: .gitignore  CMakeLists.txt  README.md  assets.qrc  main.cpp
AudioInfo/: audioinfo.cpp  audioinfo.h
MusicPlayerController/: musicplayercontroller.cpp  musicplayercontroller.h
SearchList/: searchlist.cpp  searchlist.h
Util/: util.cpp  util.h
qml/: AudioInfoBox.qml  Main.qml  PlaylistPanel.qml  SearchPanel.qml  TextButton.qml
